rustdocs/errors/rust-bitcoin-primitives-src-script-borrowed.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/primitives/src/script/borrowed.rs:12:5
   |
12 | use super::ScriptBuf;
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/primitives/src/script/borrowed.rs:3:5
  |
3 | use core::marker::PhantomData;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/primitives/src/script/borrowed.rs:4:5
  |
4 | use core::ops::{
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `encoding`
  --> ../rust-bitcoin/primitives/src/script/borrowed.rs:10:5
   |
10 | use encoding::{BytesEncoder, CompactSizeEncoder, Encodable, Encoder2};
   |     ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
   |
help: you might be missing a crate named `encoding`, add it to your project and import it in your code
   |
 3 + extern crate encoding;
   |

error[E0432]: unresolved import `crate::prelude`
  --> ../rust-bitcoin/primitives/src/script/borrowed.rs:13:12
   |
13 | use crate::prelude::{Box, ToOwned, Vec};
   |            ^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::prelude`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/primitives/src/script/borrowed.rs:15:1
   |
15 | internals::transparent_newtype! {
   | ^^^^^^^^^ use of unresolved module or unlinked crate `internals`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
   --> ../rust-bitcoin/primitives/src/script/borrowed.rs:156:1
    |
156 | encoding::encoder_newtype! {
    | ^^^^^^^^ use of unresolved module or unlinked crate `encoding`

error[E0425]: cannot find type `Script` in this scope
  --> ../rust-bitcoin/primitives/src/script/borrowed.rs:82:31
   |
82 | impl<T: 'static> Default for &Script<T> {
   |                               ^^^^^^ not found in this scope

error[E0425]: cannot find type `Script` in this scope
  --> ../rust-bitcoin/primitives/src/script/borrowed.rs:87:21
   |
87 | impl<T> ToOwned for Script<T> {
   |                     ^^^^^^ not found in this scope

error[E0425]: cannot find type `Script` in this scope
  --> ../rust-bitcoin/primitives/src/script/borrowed.rs:94:9
   |
94 | impl<T> Script<T> {
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find type `Script` in this scope
   --> ../rust-bitcoin/primitives/src/script/borrowed.rs:161:23
    |
161 | impl<T> Encodable for Script<T> {
    |                       ^^^^^^ not found in this scope

error[E0425]: cannot find type `ScriptEncoder` in this scope
   --> ../rust-bitcoin/primitives/src/script/borrowed.rs:163:11
    |
163 |         = ScriptEncoder<'a>
    |           ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `Script` in this scope
   --> ../rust-bitcoin/primitives/src/script/borrowed.rs:188:38
    |
188 |               impl<T> Index<$type> for Script<T> {
    |                                        ^^^^^^ not found in this scope
...
200 | / delegate_index!(
201 | |     Range<usize>,
202 | |     RangeFrom<usize>,
203 | |     RangeTo<usize>,
...   |
207 | |     (Bound<usize>, Bound<usize>)
208 | | );
    | |_- in this macro invocation
    |
    = note: this error originates in the macro `delegate_index` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 13 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
